--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "gridsome": "^0.7.0",
-    "tailwindcss": "^1.1.4"
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
+    "tailwindcss": "^1.2.0-canary.5"
   }
 }
