--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "dev-directory",
   "private": true,
   "scripts": {
+    "prebuild": "node --experimental-modules generate-data.js",
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@gridsome/transformer-json": "^0.2.1",
     "gridsome": "^0.7.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "tailwindcss": "^1.2.0-canary.5"
-  }
+  },
+  "type": "module"
 }
