--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "explore": "gridsome explore"
   },
   "dependencies": {
-    "@gridsome/transformer-json": "^0.2.1",
+    "dotenv": "^8.2.0",
     "gridsome": "^0.7.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
