--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "gridsome": "^0.7.0",
+    "js-search": "^1.4.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "tailwindcss": "^1.2.0-canary.5"
