--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "dev-directory",
   "private": true,
   "scripts": {
-    "prebuild": "node --experimental-modules generate-data.js",
+    "prebuild": "node --experimental-modules generate-data.mjs",
+    "predevelop": "node --experimental-modules generate-data.mjs",
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore"
   },
   "dependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
     "dotenv": "^8.2.0",
     "gridsome": "^0.7.0",
     "js-search": "^1.4.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
     "tailwindcss": "^1.2.0-canary.5"
-  },
-  "type": "module"
+  }
 }
