--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-search": "^1.4.3",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "tailwindcss": "^1.2.0-canary.5"
+    "tailwindcss": "^1.4.4",
+    "vuescroll": "^4.15.0"
   }
 }
